--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -10,7 +10,7 @@
 <body>
   <mat-card>
     <mat-card-header class="loginUser">
-      <mat-card-title>login to myflix!</mat-card-title>
+      <mat-card-title>login to ghibliflix!</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="loginForm">
