--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -10,7 +10,7 @@
 <body>
   <mat-card>
     <mat-card-header class="registerUser">
-      <mat-card-title>sign up for myflix!</mat-card-title>
+      <mat-card-title>sign up for ghibliflix!</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="registerForm">
