--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,15 +19,12 @@ $myFlix-Angular-client-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$myFlix-Angular-client-theme: mat.define-light-theme((
-  color: (
-    primary: $myFlix-Angular-client-primary,
-    accent: $myFlix-Angular-client-accent,
-    warn: $myFlix-Angular-client-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$myFlix-Angular-client-theme: mat.define-light-theme((color: (primary: $myFlix-Angular-client-primary,
+        accent: $myFlix-Angular-client-accent,
+        warn: $myFlix-Angular-client-warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -37,5 +33,64 @@ $myFlix-Angular-client-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  background-color: ghostwhite;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-family: 'Dosis', sans-serif;
+  line-height: 100%;
+  font-size: 70px;
+}
+
+h2 {
+  color: black;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-variant: all-small-caps;
+  outline: 1px solid black;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+h3 {
+  font-variant: all-small-caps;
+}
+
+input::placeholder {
+  font-style: italic;
+  font-variant: all-small-caps;
+  letter-spacing: 1px;
+}
+
+.favoritedMovie {
+  width: 250px;
+  border: none;
+  margin-top: 20px;
+  border-radius: 50px;
+  background-color: #8fbc8f33;
+  transition: all 0.4s;
+}
+
+.favoritedHeartOutline,
+.favoritedMovie:hover .favoritedHeart {
+  color: #000;
+  padding-top: 5px;
+  transition: all 0.4s;
+}
+
+.favoritedMovie:hover .favoritedHeartOutline,
+.favoritedHeart {
+  padding-top: 5px;
+  color: red;
+  transition: all 0.4s;
+}
