--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,41 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ghibliFlix</title>
-</head>
-
-<body>
-  <h1>ghibliFlix</h1>
-  <button mat-raised-button (click)="openProfile()" color="primary">
-    Profile
-  </button>
-  <div style="display: flex;">
-    <mat-card class="movieCard" *ngFor="let movie of movies;" style="flex: 1 0 auto;">
-      <mat-card-header class="cardHeader">
-        <mat-card-title class="movieTitle">{{movie.Title}}
-        </mat-card-title>
-        <mat-card-subtitle>
-          {{movie.Director.Name}} • {{movie.Released}}
-        </mat-card-subtitle>
-      </mat-card-header>
-      <img src={{movie.ImagePath}} alt={{movie.Title}} style="width: 300px; height: 450px;" />
-      <button (click)="toggleFavorite(movie)" class="favoritedMovie">
-        <mat-icon *ngIf="!isFavorite(movie._id)" class="favoritedHeartOutline">favorite_border</mat-icon>
-        <mat-icon *ngIf="isFavorite(movie._id)" class="favoritedHeart">favorite</mat-icon>
-      </button>
-      <mat-card-actions>
-        <button mat-button (click)="openGenreInfo(movie.Genre.Name, movie.Genre.Description)"
-          class="buttonLink">Genre</button>
-        <button mat-button
-          (click)="openDirectorInfo(movie.Director.Name, movie.Director.Bio, movie.Director.Birth, movie.Director.Death)"
-          class="buttonLink">Director</button>
-        <button mat-button (click)="openMovieInfo(movie)" class="buttonLink">Synopsis</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</body>
-
-</html>
+<app-nav-bar [ngStyle]="this.style.header" style="position: relative;z-index: 9;"></app-nav-bar>
+<div style="padding-bottom: 20px;" [ngStyle]="this.style.card">
+  <mat-card class="movieCard" *ngFor="let movie of movies;" style="flex: 1 0 auto;">
+    <mat-card-header class="cardHeader">
+      <mat-card-title class="movieTitle">{{movie.Title}}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{movie.Director.Name}} • {{movie.Released}}
+      </mat-card-subtitle>
+    </mat-card-header>
+    <img src={{movie.ImagePath}} alt={{movie.Title}} style="width: 300px; height: 450px;" />
+    <button (click)="toggleFavorite(movie)" class="favoritedMovie">
+      <mat-icon *ngIf="!isFavorite(movie._id)" class="favoritedHeartOutline">favorite_border</mat-icon>
+      <mat-icon *ngIf="isFavorite(movie._id)" class="favoritedHeart">favorite</mat-icon>
+    </button>
+    <mat-card-actions>
+      <button mat-button (click)="openGenreInfo(movie.Genre.Name, movie.Genre.Description)"
+        class="buttonLink">Genre</button>
+      <button mat-button
+        (click)="openDirectorInfo(movie.Director.Name, movie.Director.Bio, movie.Director.Birth, movie.Director.Death)"
+        class="buttonLink">Director</button>
+      <button mat-button (click)="openMovieInfo(movie)" class="buttonLink">Synopsis</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
