--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,41 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registration</title>
-</head>
-
-<body>
-  <mat-card>
-    <mat-card-header class="registerUser">
-      <mat-card-title>sign up for ghibliflix!</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form class="registerForm">
-        <mat-form-field class="registerField">
-          <input matInput [(ngModel)]="userData.Username" type="text" placeholder="Username" name="Username"
-            class="registerInput" required>
-        </mat-form-field>
-        <mat-form-field class="registerField">
-          <input matInput [(ngModel)]="userData.Password" type="password" placeholder="Password" name="Password"
-            required>
-        </mat-form-field>
-        <mat-form-field class="registerField">
-          <input matInput [(ngModel)]="userData.Email" type="email" placeholder="Email" name="Email" required>
-        </mat-form-field>
-        <mat-form-field class="registerField">
-          <input matInput [(ngModel)]="userData.Birthday" type="date" placeholder="Birthday" name="Birthday">
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="registerUser()" color="primary" class="registerButton">
-        Sign Up
-      </button>
-    </mat-card-actions>
-  </mat-card>
-</body>
-
-</html>
+<mat-card style="text-align: center;">
+  <mat-card-header class="registerUser">
+    <mat-card-title>sign up for ghibliflix!</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form class="registerForm">
+      <mat-form-field class="registerField">
+        <input matInput [(ngModel)]="userData.Username" type="text" placeholder="Username" name="Username"
+          class="registerInput" required>
+      </mat-form-field>
+      <mat-form-field class="registerField">
+        <input matInput [(ngModel)]="userData.Password" type="password" placeholder="Password" name="Password" required>
+      </mat-form-field>
+      <mat-form-field class="registerField">
+        <input matInput [(ngModel)]="userData.Email" type="email" placeholder="Email" name="Email" required>
+      </mat-form-field>
+      <mat-form-field class="registerField">
+        <input matInput [(ngModel)]="userData.Birthday" type="date" placeholder="Birthday" name="Birthday">
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="registerUser()" color="primary" class="registerButton">
+      Sign Up
+    </button>
+  </mat-card-actions>
+</mat-card>
