--- a/src/app/director-info/director-info.component.html
+++ b/src/app/director-info/director-info.component.html
@@ -3,6 +3,8 @@
     <mat-card-subtitle>
       <h3>get to know your director</h3>
     </mat-card-subtitle>
+
+    <!-- Dialog box for director information *** name, birth (and death date if applicable), biography -->
     <mat-card-title>
       <h1>
         {{data.Name}}
