--- a/src/app/genre-info/genre-info.component.html
+++ b/src/app/genre-info/genre-info.component.html
@@ -1,4 +1,6 @@
 <mat-card class="infoCard">
+
+  <!-- Dialog box for genre information *** name and description -->
   <mat-card-header>
     <mat-card-subtitle>
       <h3>interested in the genre?</h3>
