--- a/src/app/movie-info/movie-info.component.html
+++ b/src/app/movie-info/movie-info.component.html
@@ -1,6 +1,8 @@
+<!-- DIALOG BOX FOR MOVIE INFO -->
 <mat-card class="infoCard">
   <mat-card-header>
     <mat-card-subtitle>
+      <!-- FEATURE FILM STATUS + GENRE -->
       <h3>{{data.movie.Featured ? 'Feature' :
         'Non-Feature'}} {{data.movie.Genre.Name}} Film</h3>
     </mat-card-subtitle>
