--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -4,23 +4,40 @@ $body-bg: Ghostwhite;
 
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
 
-body {
-  padding-top: 20px;
-}
-
 h1 {
+  margin-left: 77px;
   font-size: 50px;
   text-align: center;
   font-family: "Dosis", sans-serif;
 }
 
-.updateButton,
-.backButton {
-  width: fit-content;
-  color: #000;
-  font-size: 16px;
-  font-variant: all-small-caps;
-  margin-bottom: 30px;
+.profile {
+  padding-top: 70px;
+}
+
+.profileUser {
+  width: 100%;
+  text-align: center;
+}
+
+.editText {
+  display: none;
+}
+
+.editButton {
+  padding-left: 15px;
+  border-radius: 50px;
+}
+
+.editButton:hover {
+  margin-right: -5px;
+}
+
+.editButton:hover .editText {
+  margin-right: -14px;
+  padding-right: 15px;
+  display: inline;
+  width: 50px;
 }
 
 .movieCard {
@@ -28,7 +45,9 @@ h1 {
   text-align: center;
   align-items: center;
   margin-left: 20px;
-  margin-top: 20px;
+  padding-bottom: 15px;
+  border-radius: 20px;
+
 }
 
 .cardHeader {
