Added subtitle to Username field
Backend was updated to allow certain characters, the text adds context to what is allowed.

--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -8,6 +8,8 @@
         <input matInput [(ngModel)]="userData.Username" type="text" placeholder="Username" name="Username"
           class="registerInput" required>
       </mat-form-field>
+      <mat-card-subtitle class="requirements">* [&nbsp; A - Z,&nbsp; 0 - 9, &nbsp;-&nbsp; _ &nbsp;. &nbsp;]
+      </mat-card-subtitle>
       <mat-form-field class="registerField">
         <input matInput [(ngModel)]="userData.Password" type="password" placeholder="Password" name="Password" required>
       </mat-form-field>
